turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: value update is not a member of java.awt.Color
		if (getCouleurSol()=colors(c)) {
                    ^Turmite:7: error: Unit does not take parameters
			NextColor();
                                 ^Turmite:8: error: Unit does not take parameters
			NextMove();
                                ^Turmite:9: error: not found: value state
			state=NextState();
                        ^Turmite:10: error: reassignment to val
			c=color.length
                         ^Turmite:12: error: reassignment to val
		c=c+1
                 ^Turmite:23: error: not found: value state
		a=rule(state)(c)(0)
                       ^Turmite:24: error: not found: value r
		setCouleurSol(colors(r))
                                     ^Turmite:28: error: not found: value state
		rule(state)(c)(1) match {
                     ^Turmite:39: error: not found: value state
		b=rule(state)(c)(2)
                       ^Turmite:58: error: not found: value rule
		a=rule(state)(c)(0)
                  ^Turmite:59: error: not found: value colors
		setCouleurSol(colors(r))
                              ^